# insightface

./: pyproject.toml
self_src/: utils.py  utils_new.py
temp/: detect_and_recog_0106.py  detect_and_recog_0107.py  detect_and_recog_0206.py  detect_and_recog_0407df.py  detect_and_recog_0607df.py  detect_and_recog_0707df.py  detect_and_recog_1006.py  detect_and_recog_1207df.py  detect_and_recog_1305.py  detect_and_recog_1506.py  detect_and_recog_1605.py  detect_and_recog_1606.py  detect_and_recog_2007.py  detect_and_recog_2806.py  detect_and_recog_2906.py  detect_and_recog_3005.py  detect_and_recog_3105.py  detect_and_recog_thispersondoesnotexist.py  detect_and_recog_thispersondoesnotexist0707.py  inference_onnx_opencv.py  metrics.py  metrics1305.py  metrics_onnx_onnxruntime.py  pandas_base_creator.py  pandas_base_creator_native.py  person_detector2.py
