[tool.poetry]
name = "insightface"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.3"
Cython = "^0.29.28"
torchvision = "0.5.0"
tqdm = "^4.64.0"
opencv-python = "^4.5.5"
scikit-learn = "^1.0.2"
matplotlib = "^3.5.1"
h5py = "^3.6.0"
PyYAML = "^6.0"
seaborn = "^0.11.2"
imageio = "^2.16.2"
easydict = "^1.9"
tensorboardX = "^2.5"
onnxruntime = "^1.11.0"
mmdet = "^2.23.0"
mmcv = "^1.4.8"
onnxruntime-gpu = "^1.11.0"
onnx = "^1.11.0"
onnx-simplifier = "^0.3.7"
tensorboard = "^2.8.0"
mxnet = "^1.9.0"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
