[tool.poetry]
name = "insightface"
version = "0.1.0"
description = ""
authors = ["iamsvp <PSV1994@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
opencv-python = "^4.6.0"
numpy = "^1.22.4"
insightface = "^0.6.2"
onnxruntime-gpu = "^1.11.0"
onnxruntime = "^1.11.0"
protobuf = "3.19.0"
tensorflow = "2.2.0"
retina-face = "^0.0.12"
Cython = "^0.29.28"
tqdm = "^4.64.0"
mxnet = "^1.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
